--- a/auth.html
+++ b/auth.html
@@ -515,7 +515,7 @@
             <!-- Google Sign In -->
             <button class="google-signin" id="googleBtn" type="button">
                 <div class="google-icon"></div>
-                <span>Continue with Google</span>
+                <span>Continue as guest</span>
             </button>
             
             <!-- Terms -->
